--- a/erkeb/Base.lproj/Main.storyboard
+++ b/erkeb/Base.lproj/Main.storyboard
@@ -26,11 +26,44 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="r7F-SO-WCZ">
+                                <rect key="frame" x="20" y="35" width="335" height="40"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y0I-XG-ARA">
+                                        <rect key="frame" x="0.0" y="13" width="27" height="14"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="14" id="HBu-tW-egN"/>
+                                            <constraint firstAttribute="width" constant="27" id="xgq-8O-Muz"/>
+                                        </constraints>
+                                        <state key="normal" image="MenuBtn"/>
+                                    </button>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="HeaderLogo" translatesAutoresizingMaskIntoConstraints="NO" id="BNJ-fq-DWY">
+                                        <rect key="frame" x="44" y="5" width="234" height="30.000000000000014"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="FuZ-8y-ktu"/>
+                                            <constraint firstAttribute="width" constant="187" id="foN-wp-Z1Y"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jMs-Ca-RDB">
+                                        <rect key="frame" x="295" y="0.0" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="EbF-w4-bDp"/>
+                                            <constraint firstAttribute="height" constant="40" id="S4p-jh-cnx"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="wAJ-93-yr6"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6N4-LG-C9Y" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="GeL-qD-nKO"/>
                             <constraint firstItem="6N4-LG-C9Y" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="XN9-Mo-tld"/>
+                            <constraint firstItem="r7F-SO-WCZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="15" id="bkC-ky-19O"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="r7F-SO-WCZ" secondAttribute="trailing" constant="20" id="i8C-qr-uWm"/>
+                            <constraint firstItem="r7F-SO-WCZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="pEx-xP-Ssh"/>
                             <constraint firstItem="6N4-LG-C9Y" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="ueV-JL-4z5"/>
                             <constraint firstItem="6N4-LG-C9Y" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="z9s-BU-vuo"/>
                         </constraints>
@@ -42,4 +75,8 @@
             <point key="canvasLocation" x="53.600000000000001" y="27.436281859070466"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="HeaderLogo" width="305.5" height="53.5"/>
+        <image name="MenuBtn" width="39" height="22.5"/>
+    </resources>
 </document>
