--- a/erkeb/Base.lproj/LaunchScreen.storyboard
+++ b/erkeb/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,13 +17,41 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreenBGAsset 31" translatesAutoresizingMaskIntoConstraints="NO" id="zoi-xg-2aL">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="375" id="178-SG-WdP"/>
+                                    <constraint firstAttribute="height" constant="667" id="sm4-cW-ORW"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreenIconAsset 29" translatesAutoresizingMaskIntoConstraints="NO" id="2M4-Kv-Rh2">
+                                <rect key="frame" x="81.5" y="206.5" width="212" height="254"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="212" id="Cyw-2h-Myb"/>
+                                    <constraint firstAttribute="height" constant="254" id="mI5-4T-t8o"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="zoi-xg-2aL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="4ih-zz-UcY"/>
+                            <constraint firstItem="zoi-xg-2aL" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Hyk-16-4bI"/>
+                            <constraint firstItem="zoi-xg-2aL" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="Roq-Rc-JWM"/>
+                            <constraint firstItem="zoi-xg-2aL" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="bg6-uq-uJ1"/>
+                            <constraint firstItem="2M4-Kv-Rh2" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="o0y-xy-Dnv"/>
+                            <constraint firstItem="2M4-Kv-Rh2" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="zZC-6m-5Kw"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="LaunchScreenBGAsset 31" width="750.5" height="1334"/>
+        <image name="LaunchScreenIconAsset 29" width="430" height="503"/>
+    </resources>
 </document>
